# timetracksync

./: Cargo.toml  README.md
src/: lib.rs  main.rs
src/cli/: ingest.rs  mod.rs  serve_telegram.rs
